feat: hover effect for project cards

--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,5 @@
 @import "tailwindcss";
 
 body {
-  background-color: var(--color-gray-800)
-    /* oklch(0.278 0.033 256.848) = #1e2939 */;
+  background-color: var(--color-gray-800);
 }
