--- a/src/App.css
+++ b/src/App.css
@@ -4,6 +4,50 @@ body {
   background-color: var(--color-);
 }
 
+/* Hamburger Menu*/
+
+#menuToggle span {
+  display: block;
+  width: 33px;
+  height: 4px;
+  margin-bottom: 5px;
+  position: relative;
+
+  background: #cdcdcd;
+  border-radius: 3px;
+
+  z-index: 1;
+
+  transform-origin: 4px 0px;
+
+  transition:
+    transform 0.5s cubic-bezier(0.77, 0.2, 0.05, 1),
+    opacity 0.55s ease;
+}
+
+#menuToggle span:first-child {
+  transform-origin: 0% 0%;
+}
+
+#menuToggle span:nth-last-child(2) {
+  transform-origin: 0% 100%;
+}
+
+#menuToggle button.open span {
+  opacity: 1;
+  transform: rotate(45deg) translate(-5px, -15px);
+}
+
+#menuToggle button.open span:nth-last-child(3) {
+  opacity: 0;
+  transform: rotate(0deg) scale(0.2, 0.2);
+}
+
+#menuToggle button.open span:nth-last-child(2) {
+  transform: rotate(-45deg) translate(-4px, 15px);
+}
+
+/* Parallax */
 .parallax {
   background: url("background.jpg");
   background-attachment: fixed;
