--- a/src/App.css
+++ b/src/App.css
@@ -49,7 +49,7 @@ body {
 
 /* Parallax */
 .parallax {
-  background: url("https://imgur.com/a/l4Sg21l");
+  background: url("https://i.imgur.com/CGJXYxK.jpeg");
   background-attachment: fixed;
   background-position: center;
   background-repeat: no-repeat;
